Refactoring authentication flow and enhancing error handling in AuthController. Key improvements include:
Centralized validation using AuthValidator
Consistent response formatting with ResponseUtils
Better error handling with specific exception types
Improved logging for debugging
Cleaner, more maintainable code structure